# zlink

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  release-plz.toml
.github/workflows/: rust.yml
zlink/: CHANGELOG.md  Cargo.toml
zlink-codegen/: CHANGELOG.md  Cargo.toml
zlink-codegen/src/: cli.rs  codegen.rs  error.rs  lib.rs  main.rs
zlink-codegen/test-integration/: Cargo.toml  anytype.idl  build.rs
zlink-codegen/test-integration/src/: lib.rs
zlink-codegen/tests/: codegen.rs
zlink-core/: CHANGELOG.md  Cargo.toml
zlink-core/benches/: benchmarks.rs
zlink-core/src/: error.rs  json_ser.rs  lib.rs  notified.rs  reply.rs  unix_utils.rs
zlink-core/src/call/: de.rs  ser.rs
zlink-core/src/connection/: credentials.rs  mod.rs  read_connection.rs  socket.rs  write_connection.rs
zlink-core/src/connection/chain/: mod.rs  reply_stream.rs
zlink-core/src/connection/tests/: mod.rs  (+6 more)
zlink-core/src/idl/: custom_enum.rs  custom_object.rs  custom_type.rs  field.rs  interface.rs  method.rs
zlink-core/src/introspect/: assert.rs  custom_type.rs  mod.rs
zlink-core/src/server/: infallible.rs  listener.rs  mod.rs  select_all.rs  service.rs
zlink-core/src/test_utils/: mock_socket.rs
zlink-core/src/varlink_service/: api.rs  info.rs  mod.rs  proxy.rs
zlink-macros/: CHANGELOG.md  Cargo.toml
zlink-macros/src/: lib.rs  naming.rs  proxy.rs  reply_error.rs  utils.rs
zlink-macros/src/introspect/: custom_type.rs  mod.rs  reply_error.rs  shared.rs  type.rs
zlink-macros/src/proxy/: chain_extension.rs  chain_method.rs  method_impl.rs  utils.rs
zlink-macros/src/service/: attrs.rs  codegen.rs  method.rs  mod.rs  types.rs
zlink-macros/tests/: introspect-rename.rs  introspect-reply-error.rs  reply-error-derive.rs  reply-error-rename.rs  service.rs  tuple_variant_errors.rs
zlink-macros/tests/proxy/: basic.rs  complex_lifetimes.rs  fd_passing.rs  generics.rs  lifetimes.rs  optional_params.rs  rename.rs  streaming.rs
zlink-macros/tests/service/: basic.rs  borrowed-types.rs  custom_bounds.rs  explicit-lifetimes.rs  fd_passing.rs  introspection.rs  metadata.rs  multiple_interfaces.rs  per_interface_types.rs  raw_idents.rs  streaming.rs  streaming_errors.rs  streaming_fds.rs  underscore_params.rs
zlink-smol/: CHANGELOG.md  Cargo.toml
zlink-smol/src/: lib.rs  notified.rs
zlink-smol/src/notified/: mod.rs  once.rs  state.rs
zlink-smol/src/unix/: listener.rs  stream.rs
zlink-tokio/: CHANGELOG.md  Cargo.toml
zlink-tokio/src/: notified.rs
zlink-tokio/src/notified/: mod.rs  once.rs  state.rs
zlink-tokio/src/unix/: listener.rs  mod.rs  stream.rs
zlink/examples/: README.md  resolved.rs  varlink-inspect.rs
zlink/tests/: creds-utils.rs  ftl.rs  integration_test_custom_type.rs  lowlevel-ftl.rs  machined_proxy_e2e.rs  mock_machined_service.rs  peer_credentials.rs  ready_listener_exit.rs  service-macro.rs
(+8 files in other folders)
