[workspace]
members = [
    "zlink",
    "zlink-core",
    "zlink-codegen",
    "zlink-codegen/test-integration",
    "zlink-tokio",
    "zlink-smol",
    "zlink-macros",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/z-galaxy/zlink/"
authors = ["Zeeshan Ali Khan<zeenix@gmail.com>"]

[profile.bench]
debug = true
strip = "none"
