[package]
name = "zlink-codegen"
version = "0.5.0"
description = "Utility to generate zlink code from varlink IDL files"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["varlink", "ipc", "codegen", "idl", "generator"]
categories = ["development-tools::build-utils", "parsing"]
authors.workspace = true

[[bin]]
name = "zlink-codegen"
path = "src/main.rs"

[dependencies]
zlink = { path = "../zlink", version = "0.5.0", features = [
    "idl",
    "idl-parse",
] }
clap = { version = "4.5", features = ["derive"] }
heck = "0.5"

[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"

[package.metadata.docs.rs]
all-features = true
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-unknown-freebsd",
    "x86_64-unknown-netbsd",
]
